--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  padding-top: 50px;
+}
+
+.container {
+  background-color: rgba(179, 234, 225, 0.685);
+  width: 350px;
+  height: 400px;
+  border-radius: 15px;
+  -webkit-box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000,
+    0px 0px 19px 7px rgba(0, 0, 0, 0.24);
+  box-shadow: 5px 5px 5px 0px #000000, inset 4px 4px 15px 0px #000000,
+    0px 0px 19px 7px rgba(0, 0, 0, 0.24);
+}
+
+.title {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px 20px 0px 20px;
+}
+
+.logo {
+  height: 80px;
+  width: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.heading {
+  font-size: 23px;
+}
+
+main {
+  padding: 20px;
+}
+
+.values {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.buttonPosition {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.convertButton {
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: black;
   color: white;
+  border: solid white 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.convertButton:hover {
+  background-color: white;
+  color: black;
+  border: solid black 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  padding: 0px 20px 20px 20px;
+}
+
+.result {
+  font-weight: 800;
+  font-size: 20px;
 }
